--- a/src/styles.css
+++ b/src/styles.css
@@ -8,6 +8,9 @@ html, body {
   margin: 0;
   height: 100vh;
   width: 100vw;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 h1:focus {
